--- a/0-bootstrap/single-cluster/2-services/argocd/operators/ibm-foundations.yaml
+++ b/0-bootstrap/single-cluster/2-services/argocd/operators/ibm-foundations.yaml
@@ -13,7 +13,7 @@ metadata:
 spec:
   destination:
     namespace: openshift-operators
-    server: 'https://kubernetes.default.svc'
+    server: "https://kubernetes.default.svc"
   project: services
   source:
     path: operators/ibm-foundations
@@ -22,7 +22,7 @@ spec:
         ibm-common-services:
           subscriptions:
             subscription:
-              channel: v3
+              channel: v3.23
               config:
                 resources: {}
               installPlanApproval: Automatic
